# chad-ui

./: .gitignore  CONTRIBUTING.md  README.md  justfile  pyproject.toml
docs/: .gitignore  manage.py  package-lock.json  package.json  pyproject.toml  vite.config.mjs
docs/config/: asgi.py  env.py  urls.py  wsgi.py
docs/config/django/: base.py
docs/config/settings/: django_cotton.py  django_vite.py  whitenoise.py
docs/docs/: context.py  context_processors.py  registry.py  urls.py  views.py
docs/docs/forms/: input.py
docs/docs/templates/docs/: base.html  header.html  home.html
docs/docs/urls/: base.py  blocks.py
docs/docs/urls/components/: __init__.py  accordion.py  alert.py  badge.py  button.py  button_group.py  field.py  input.py  input_group.py  select.py
docs/docs/views/: base.py  blocks.py
docs/docs/views/components/: accordion.py  alert.py  badge.py  button.py  button_group.py  field.py  input.py  select.py
docs/markdown/components/: accordion.md  alert.md  badge.md  button.md  button_group.md  collapsible.md  field.md  input.md  input_group.md  select.md  sheet.md  tabs.md
docs/markdown/sections/: installation.md  introduction.md  usage_patterns.md
docs/scripts/: build-docs.mjs
docs/scripts/config/components/: accordion.json  alert.json  badge.json  field.json  input.json  input_group.json  select.json
docs/static/css/: main.css
docs/static/js/: main.js  theme.js
docs/templates/: 404.html  base-markdown.html  base.html  header.html  home.html
docs/templates/blocks/: base.html  blocks.html
docs/templates/cotton/callout/: index.html
docs/templates/cotton/code/: index.html
docs/templates/cotton/example/: code.html  index.html  preview.html
docs/templates/cotton/icons/: audio_lines.html  git_branch.html  git_fork.html  list_filter.html  user_round_x.html  volume_off.html
docs/templates/docs/: base.html  blocks.html  components.html  installation.html  introduction.html  sidebar.html
docs/templates/svg/: chatgpt.html  claude.html  markdown.html
(+133 files in other folders)
