[project]
name = "chad-ui"
version = "0.0.0"
description = "Cotton/HTMX/AlpineJS Django components in the style of shadcn/ui"
authors = [
    {name = "Maxim Belyayev",email = "maximbelyayev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "rich (>=14.2.0,<15.0.0)",
]

[project.scripts]
chad-ui = 'chad_ui.main:cli'

[tool.poetry]
packages = [{include = "chad_ui", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.15,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "justfile",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"